--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
   <meta name="applicable-device" content="mobile">
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
