--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Github Feeds</title>
+  <title>GraphQL Feeds on Reddit</title>
   <meta name="theme-color" content="#24292e">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <ol class="yue">Loading...</ol>
   <script src="./index.js"></script>
 </body>
 
